# LocalCounsel

./: .gitignore  LICENSE  README.md  TODO.md  build.gradle.kts  index.md  noxfile.py  pyproject.toml  settings.gradle.kts
.agents/: agent_instructions.md
docs/: ARCHITECTURE.md  bia-e2e-flow.md  erasmus-processes.md  final-report-llm-eu-ai-act.md  health-integration-architecture.md
docs/erasmus/: requirements.md
docs/longevity-coach/: TODO-dify-local-gemma.md  bia-e2e-flow.md  dify_bia_tool_openapi.yaml  health-integration-architecture.md  requirements.md
installer/: README.md
pipeline/: __init__.py  config.py  dify_setup.py  firewall.py  okf.py  provisioning.py  reporting.py  server.py  util.py
requirements/: requirements.md
requirements/erasmus/: requirements.md
requirements/longevity_mentor/: requirements.md
requirements/use_cases/: erasmus_plus.md
scripts/: demo_nutrition_advice.py
src/local_counsel/: __init__.py  assistant.py  config.py  okf_review.py
tests/: test_bia_anonymization_gemma_eval.py  test_dify_bia_flow_e2e.py  test_llm_integration.py  test_nutrition_advice_e2e.py
tests/data/: anonymized_beurer_bia_7m.json
tests/end-to-end/: _demo.py  conftest.py  demo_page.html  test_dify_greeting_demo.py  test_nutrition_advice_demo.py
tests/unit/: conftest.py  test_beurer_bia_anonymized_fixture.py  test_config.py  test_dify_tool_server_mvp.py  test_health_sync_mock.py  test_health_sync_trigger.py  test_nutrition_prompt.py  test_okf.py  test_okf_review.py  test_openehr_crypto.py  test_openehr_store.py  (+4 more)
workflows/: bia_longevity_evaluator.yml
(+19 files in other folders)
